--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "google-genai>=1.48.0",
-    "gradio>=5.49.1",
     "llm-sandbox[docker]>=0.3.24",
     "markdown-pdf>=1.10",
     "openpyxl>=3.1.5",
     "pathspec>=0.12.1",
     "python-dotenv>=1.2.1",
     "pyyaml>=6.0.3",
+    "streamlit>=1.40.0",
 ]
